# HsStdHep

./: Config.hs  HsStdHep.cabal  Setup.lhs
csrc/: hs_stdhep.c  hs_stdhep_mcfio.h
exe/: hsstdhep.hs
lib/HEP/Parser/: StdHep.hs
lib/HEP/Parser/StdHep/: Command.hs  FFI.hsc  IO.hs  IO.hsc  Job.hs  MCFIO.hs  ProgType.hs  StdHep.hs  Type.hs  Type.hsc  TypeCast.hs
lib/HEP/Parser/StdHep/IO/: Internal.hsc
lib/HEP/Parser/StdHep/MCFIO/: Internal.hsc
lib/HEP/Parser/StdHep/StdHep/: Internal.hsc
test/: compile  test.hs
