Name:		HsStdHep
Version:	0.0.1
Synopsis:	
Description: 	
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Custom
Cabal-Version:  >= 1.8
Extra-source-files: Config.hs
                    stdhep/stdhep-5-06-01-IW.tar.gz

Executable hsstdhep
  Main-is: hsstdhep.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4, mtl>2, directory, filepath,
                   cmdargs, HsStdHep

Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4, mtl>2, directory, filepath,
                   cmdargs
  Exposed-Modules: 
                   HEP.Parser.StdHep.Type
                   HEP.Parser.StdHep.Job
                   HEP.Parser.StdHep.Command
  Other-Modules: 

 
		 