Name:		HsStdHep
Version:	0.0.3
Synopsis:	
Description: 	
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Custom
Cabal-Version:  >= 1.8
Extra-source-files: Config.hs
                    stdhep/stdhep-5-06-01-IW.tar.gz
                    include/*.inc
                    include/*.h
                    include/herwig/*.inc
                    include/isajet/*.inc
                    include/pythia/*.inc
                    include/qq/*.inc

Executable hsstdhep
  Main-is: hsstdhep.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4, mtl>2, directory, filepath,
                   cmdargs, HsStdHep

Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4, mtl>2, directory, filepath,
                   cmdargs
  Exposed-Modules: 
                   HEP.Parser.StdHep.ProgType
                   HEP.Parser.StdHep.Job
                   HEP.Parser.StdHep.Command
                   HEP.Parser.StdHep.IO
                   HEP.Parser.StdHep.TypeCast
  Other-Modules: 
  Include-dirs:    /Users/iankim/mac/temp/stdhep-5-06-01/src/inc, csrc
  Install-includes: hs_stdhep_mcfio.h
  C-sources:        csrc/hs_stdhep_mcfio.c  

  extra-lib-dirs:  /Users/iankim/mac/temp/stdhep-5-06-01/lib
  extra-libraries: Fmcfio, stdhep, stdhepC


--  Install-includes: hepeup.h
--                    hepev4.h
--                    heprup.h
--                    stdcm1.h
--                    stdcnt.h
--                    stdevent.h
--                    stdhd.h
--                    stdhep.h
--                    stdhep_mcfio.h
--                    stdlun.h
--                    stdtmp.h
--                    stdver.h

 
		 